--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "facebookAccount": {
-    "email": "",
-    "password": "",
+    "email": "hasibhassain38@gmail.com",
+    "password": "hasib-12",
     "2FASecret": "",
     "i_user": "",
     "proxy": null,
@@ -12,16 +12,14 @@
   "antiInbox": false,
   "language": "en",
   "notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-  "nickNameBot": "obito-bot",
+  "nickNameBot": "naru",
   "prefix": "/",
   "adminOnly": {
     "enable": false,
     "ignoreCommand": []
   },
   "adminBot": [
-    "100078794143432",
-    "100001986888287",
-    "100000180724818"
+    "61557991443492"
   ],
   "developers": [
     "100078794143432",
