--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "facebookAccount": {
-    "email": "hasibhassain38@gmail.com",
+    "email": "firetix000@gmail.com",
     "password": "hasib-12",
     "2FASecret": "",
     "i_user": "",
@@ -22,14 +22,10 @@
     "61557991443492"
   ],
   "developers": [
-    "100078794143432",
-    "100001986888287",
-    "100000180724818"
+    "61557991443492"
   ],
   "premium": [
-    "100078794143432",
-    "100001986888287",
-    "100000180724818"
+    "61557991443492"
   ],
   "whiteListMode": {
     "enable": false,
