--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,28 @@
-module.exports = {  
-  config: {  
-    name: "command_name",                // 🔹 Command Name  
-    version: "1.0",                      // 🔸 Version  
-    author: "xnil6x",                    // 👨‍💻 Developer  
-    role: 4,                             // 🔐 Required Access Level  
-    usePrefix: true,                     // ⛓️ Prefix Requirement  
-    description: "Command Description",   // 📝 Functionality  
-    guide: "Usage Guide",                // 📘 Command Syntax  
-    category: "Utility",                 // 🧰 Function Category  
-    cooldowns: 3                         // ⏳ Execution Delay (seconds)  
-  }  
-};
+name: Node.js CI
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  build:
+
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm install
+    - run: npm start
